fix scrollbar bug

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -10,4 +10,10 @@ body {
     padding: 0;
     margin: 0;
     font-family: 'ProductSans';
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+}
+
+body::-webkit-scrollbar {
+    display: none;
 }
